--- a/etl/assets/sql/tables/team.sql.j2
+++ b/etl/assets/sql/tables/team.sql.j2
@@ -1,4 +1,4 @@
-CREATE TABLE team (
+CREATE TABLE {{ table_name | lower }} (
     id INT PRIMARY KEY,
     conference VARCHAR(255),
     division VARCHAR(255),
